[package]
name = "ray_tracing"
version = "0.1.0"
authors = ["Tadaboody <tomer.keren.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
indicatif = "0.14.0"
noisy_float = "0.1.12"
rand = "*"
